Updated tests for RNA in report

--- a/src/cppNGSD-TEST/data_out/germline_report1.html
+++ b/src/cppNGSD-TEST/data_out/germline_report1.html
@@ -65,15 +65,15 @@ p
 <br />In der folgenden Tabelle werden neben wahrscheinlich pathogenen (Klasse 4) und pathogenen (Klasse 5) nur solche Varianten unklarer klinischer Signifikanz (Klasse 3) gelistet, f&uuml;r die in Zusammenschau von Literatur und Klinik des Patienten ein Beitrag zur Symptomatik denkbar ist und f&uuml;r die gegebenenfalls eine weitere Einordnung der klinischen Relevanz durch Folgeuntersuchungen sinnvoll ist. Eine Liste aller detektierten Varianten kann bei Bedarf angefordert werden.
 </p>
 <table>
-<tr><td><b>Variante</b></td><td><b>Genotyp</b></td><td><b>Gen(e)</b></td><td><b>Details</b></td><td><b>Klasse</b></td><td><b>Vererbung</b></td><td><b>gnomAD</b></td></tr>
+<tr><td><b>Variante</b></td><td><b>Genotyp</b></td><td><b>Gen(e)</b></td><td><b>Details</b></td><td><b>Klasse</b></td><td><b>Vererbung</b></td><td><b>gnomAD</b></td><td><b>RNA</b></td></tr>
 </table>
 <p>&nbsp;</p>
 <table>
-<tr><td><b>CNV</b></td><td><b>Regionen</b></td><td><b>CN</b></td><td><b>Gen(e)</b></td><td><b>Klasse</b></td><td><b>Vererbung</b></td></tr>
+<tr><td><b>CNV</b></td><td><b>Regionen</b></td><td><b>CN</b></td><td><b>Gen(e)</b></td><td><b>Klasse</b></td><td><b>Vererbung</b></td><td><b>RNA</b></td></tr>
 </table>
 <p>&nbsp;</p>
 <table>
-<tr><td><b>SV</b></td><td><b>Position</b></td><td><b>Genotyp</b></td><td><b>Gen(e)</b></td><td><b>Klasse</b></td><td><b>Vererbung</b></td></tr>
+<tr><td><b>SV</b></td><td><b>Position</b></td><td><b>Genotyp</b></td><td><b>Gen(e)</b></td><td><b>Klasse</b></td><td><b>Vererbung</b></td><td><b>RNA</b></td></tr>
 </table>
 <p>&nbsp;</p>
 <p>F&uuml;r Informationen zur Klassifizierung von Varianten, siehe allgemeine Zusatzinformationen.
