--- a/src/cppNGSD-TEST/data_out/germline_report3.html
+++ b/src/cppNGSD-TEST/data_out/germline_report3.html
@@ -198,6 +198,13 @@ SPG7</td><td>126</td><td>chr16</td><td>89524046-89524104, 89554476-89554542
 </tr>
 </table>
 
+<p><b>Coverage statistics of RNA sample</b>
+<br />Number of reads: 10.99 Mio
+<br />Average sequencing depth: 15.85
+<br />Average sequencing depth of housekeeping genes: 263.87
+<br />Covered genes: 136985
+</p>
+
 <p><b>Coverage statistics for CCDS </b></p>
 <p>CCDS overall: 4815
 <br />CCDS with depth &ge;20: 4347 (90.28%)
