--- a/src/cppNGSD-TEST/data_out/germline_sheet1.html
+++ b/src/cppNGSD-TEST/data_out/germline_sheet1.html
@@ -151,7 +151,7 @@
        <td></td>
        <td>3</td>
        <td>ja (diagnostic variant)</td>
-       <td>splicing effect validated by RNA dataset</td>
+       <td>Splicing-Effekt mit RNA-Daten validiert</td>
      </tr>
       </table>
     </p>
@@ -195,7 +195,7 @@
        <td></td>
        <td>n/a</td>
        <td>ja (diagnostic variant)</td>
-       <td>no splicing effect found in RNA dataset</td>
+       <td>kein Splicing-Effekt in RNA-Daten gefunden</td>
      </tr>
       </table>
     </p>
@@ -239,7 +239,7 @@
        <td></td>
        <td>n/a</td>
        <td>ja (diagnostic variant)</td>
-       <td>RNA dataset not usable</td>
+       <td>RNA-Daten nicht nutzbar</td>
      </tr>
      <tr>
        <td>chr1:1584547-1584547 &lt;-&gt; chr19:2301863-2301863</td>
