--- a/src/cppNGSD-TEST/data_out/germline_report4.html
+++ b/src/cppNGSD-TEST/data_out/germline_report4.html
@@ -198,6 +198,13 @@ SPG7</td><td>126</td><td>chr16</td><td>89524046-89524104, 89554476-89554542
 </tr>
 </table>
 
+<p><b>Abdeckungsstatistik der RNA-Probe</b>
+<br />Anzahl der Reads: 10.99 Mio
+<br />Durchschnittliche Sequenziertiefe: 15.85
+<br />Durchschnittliche Sequenziertiefe der Housekeeping-Gene: 263.87
+<br />Abgedeckte Gene: 136985
+</p>
+
 <p><b>Abdeckungsstatistik f&uuml;r CCDS </b></p>
 <p>CCDS gesamt: 4815
 <br />CCDS mit Tiefe &ge;20: 4347 (90.28%)
