Finished manual curation of CNVs.

--- a/src/cppNGSD-TEST/data_out/germline_report2.html
+++ b/src/cppNGSD-TEST/data_out/germline_report2.html
@@ -63,7 +63,7 @@ p
 <br />&nbsp;&nbsp;&nbsp;&nbsp;- Allele frequency &le; 1.00%
 <br />Gefundene Varianten in Zielregion gesamt: 135
 <br />Anzahl Varianten ausgew&auml;hlt f&uuml;r Report: 2
-<br />Anzahl CNVs ausgew&auml;hlt f&uuml;r Report: 1
+<br />Anzahl CNVs ausgew&auml;hlt f&uuml;r Report: 2
 <br />Anzahl SVs ausgew&auml;hlt f&uuml;r Report: 3
 </p>
 
@@ -105,6 +105,15 @@ chr16:89531961&nbsp;G&nbsp;&gt;&nbsp;A</td><td>het (de-novo) (mosaic)</td>
 <td>22</td>
 <td>1 (comp-het)</td>
 <td>IGHV1OR21-1, TPTE</td>
+<td>n/a</td>
+<td>n/a</td>
+<td>kein Splicing-Effekt in RNA-Daten gefunden</td>
+</tr>
+<tr>
+<td>chr21:26799369-26991734 (manually curated)</td>
+<td>13</td>
+<td>3 (comp-het)</td>
+<td></td>
 <td>n/a</td>
 <td>n/a</td>
 <td>kein Splicing-Effekt in RNA-Daten gefunden</td>
