--- a/src/cppNGSD-TEST/data_out/germline_report3.html
+++ b/src/cppNGSD-TEST/data_out/germline_report3.html
@@ -63,7 +63,7 @@ p
 <br />&nbsp;&nbsp;&nbsp;&nbsp;- Allele frequency &le; 1.00%
 <br />Variants in target region: 135
 <br />Variants selected for report: 2
-<br />CNVs selected for report: 1
+<br />CNVs selected for report: 2
 <br />SVs selected for report: 3
 </p>
 
@@ -105,6 +105,15 @@ chr16:89531961&nbsp;G&nbsp;&gt;&nbsp;A</td><td>het (de-novo) (mosaic)</td>
 <td>22</td>
 <td>1 (comp-het)</td>
 <td>IGHV1OR21-1, TPTE</td>
+<td>n/a</td>
+<td>n/a</td>
+<td>no splicing effect found in RNA dataset</td>
+</tr>
+<tr>
+<td>chr21:26799369-26991734 (manually curated)</td>
+<td>13</td>
+<td>3 (comp-het)</td>
+<td></td>
 <td>n/a</td>
 <td>n/a</td>
 <td>no splicing effect found in RNA dataset</td>
