--- a/src/cppNGSD-TEST/data_out/germline_sheet1.html
+++ b/src/cppNGSD-TEST/data_out/germline_sheet1.html
@@ -197,6 +197,18 @@
        <td>ja (diagnostic variant)</td>
        <td>kein Splicing-Effekt in RNA-Daten gefunden</td>
      </tr>
+     <tr>
+       <td>chr21:26799369-26991734 (manually curated)</td>
+       <td>3</td>
+       <td></td>
+       <td>n/a</td>
+       <td></td>
+       <td></td>
+       <td></td>
+       <td>n/a</td>
+       <td>ja (diagnostic variant)</td>
+       <td>kein Splicing-Effekt in RNA-Daten gefunden</td>
+     </tr>
       </table>
     </p>
     <p><b>Kausale SVs:</b>
