--- a/src/cppNGSD-TEST/data_out/germline_sheet1.html
+++ b/src/cppNGSD-TEST/data_out/germline_sheet1.html
@@ -141,8 +141,8 @@
      <tr>
        <td>SLC25A15</td>
        <td>missense_variant</td>
-       <td>het</td>
-       <td style='white-space: nowrap'>chr13:40793234-40793234 C>G</td>
+       <td>hom</td>
+       <td style='white-space: nowrap'>chr13:40793233-40793233 T>A</td>
        <td>n/a</td>
        <td></td>
        <td></td>
