--- a/src/cppNGSD-TEST/data_out/germline_report4.html
+++ b/src/cppNGSD-TEST/data_out/germline_report4.html
@@ -74,7 +74,7 @@ p
 <tr><td><b>Variante</b></td><td><b>Genotyp</b></td><td><b>Gen(e)</b></td><td><b>Details</b></td><td><b>Klasse</b></td><td><b>Vererbung</b></td><td><b>gnomAD</b></td><td><b>RNA</b></td></tr>
 <tr>
 <td>
-chr13:40793234&nbsp;C&nbsp;&gt;&nbsp;G</td><td>het (comp-het)</td>
+chr13:40793233&nbsp;T&nbsp;&gt;&nbsp;A</td><td>hom (comp-het)</td>
 <td>SLC25A15
 </td>
 <td>SLC25A15:ENST00000338625.4:c.8C>G:p.Ser3Cys</td>
