Added manual curated SVs to HTML report.

--- a/src/cppNGSD-TEST/data_out/germline_report3.html
+++ b/src/cppNGSD-TEST/data_out/germline_report3.html
@@ -133,9 +133,9 @@ chr16:89531961&nbsp;G&nbsp;&gt;&nbsp;A</td><td>het (de-novo) (mosaic)</td>
 </tr>
 <tr>
 <td>translocation</td>
-<td>chr1:1584547-1584547 &lt;-&gt; chr19:2301863-2301863</td>
-<td>het</td>
-<td>CDK11B, LINGO3</td>
+<td>chr1:1584541-1584551 &lt;-&gt; chr19:2301861-2301871</td>
+<td>hom</td>
+<td></td>
 <td>n/a</td>
 <td>n/a</td>
 <td>n/a</td>
