--- a/src/cppNGSD-TEST/data_out/germline_report3.html
+++ b/src/cppNGSD-TEST/data_out/germline_report3.html
@@ -77,7 +77,7 @@ p
 chr13:40793233&nbsp;T&nbsp;&gt;&nbsp;A</td><td>hom (comp-het)</td>
 <td>SLC25A15
 </td>
-<td>SLC25A15:ENST00000338625.4:c.8C>G:p.Ser3Cys</td>
+<td>SLC25A15:ENST00000338625:c.7T>A:p.Ser3Thr</td>
 <td>3</td>
 <td>n/a</td>
 <td>n/a</td>
@@ -89,7 +89,7 @@ chr13:40793233&nbsp;T&nbsp;&gt;&nbsp;A</td><td>hom (comp-het)</td>
 chr16:89531961&nbsp;G&nbsp;&gt;&nbsp;A</td><td>het (de-novo) (mosaic)</td>
 <td>SPG7
 </td>
-<td>SPG7:ENST00000268704.2:c.1045G>A:p.Gly349Ser</td>
+<td>SPG7:ENST00000268704:c.1045G>A:p.Gly349Ser</td>
 <td>5</td>
 <td>n/a</td>
 <td>0.0008</td>
@@ -124,7 +124,7 @@ chr16:89531961&nbsp;G&nbsp;&gt;&nbsp;A</td><td>het (de-novo) (mosaic)</td>
 <tr><td><b>SV</b></td><td><b>Position</b></td><td><b>Genotype</b></td><td><b>Genes</b></td><td><b>Class</b></td><td><b>Inheritance</b></td><td><b>RNA</b></td></tr>
 <tr>
 <td>insertion</td>
-<td>chr1:934144-934145</td>
+<td>chr1:934143-934144</td>
 <td>hom</td>
 <td>HES4</td>
 <td>n/a</td>
@@ -133,7 +133,7 @@ chr16:89531961&nbsp;G&nbsp;&gt;&nbsp;A</td><td>het (de-novo) (mosaic)</td>
 </tr>
 <tr>
 <td>translocation</td>
-<td>chr1:1584541-1584551 &lt;-&gt; chr19:2301861-2301871</td>
+<td>chr1:1584540-1584550 &lt;-&gt; chr19:2301860-2301870</td>
 <td>hom</td>
 <td></td>
 <td>n/a</td>
@@ -142,7 +142,7 @@ chr16:89531961&nbsp;G&nbsp;&gt;&nbsp;A</td><td>het (de-novo) (mosaic)</td>
 </tr>
 <tr>
 <td>deletion</td>
-<td>chr1:1598414-1598581</td>
+<td>chr1:1598413-1598580</td>
 <td>hom</td>
 <td>SLC35E2B</td>
 <td>n/a</td>
