--- a/src/cppNGSD-TEST/data_out/germline_sheet1.html
+++ b/src/cppNGSD-TEST/data_out/germline_sheet1.html
@@ -105,12 +105,12 @@
      </tr>
      <tr>
        <td>SPG7</td>
-       <td>missense_variant</td>
+       <td>coding_sequence_variant&amp;missense_variant&amp;protein_altering_variant</td>
        <td>het</td>
        <td style='white-space: nowrap'>chr16:89531961-89531961 G>A</td>
        <td>n/a</td>
-       <td>c.1045G>A</td>
-       <td>p.Gly349Ser</td>
+       <td>ENST00000268704:c.1045G>A</td>
+       <td>ENST00000268704:p.Gly349Ser</td>
        <td>0.0008</td>
        <td>0 / 53</td>
        <td></td>
@@ -140,7 +140,7 @@
      </tr>
      <tr>
        <td>SLC25A15</td>
-       <td>missense_variant</td>
+       <td>coding_sequence_variant&amp;missense_variant&amp;protein_altering_variant</td>
        <td>hom</td>
        <td style='white-space: nowrap'>chr13:40793233-40793233 T>A</td>
        <td>n/a</td>
@@ -242,7 +242,7 @@
        <th>RNA</th>
      </tr>
      <tr>
-       <td>chr1:934144-934145</td>
+       <td>chr1:934143-934144</td>
        <td>INS</td>
        <td>HES4</td>
        <td>n/a</td>
@@ -254,7 +254,7 @@
        <td>RNA-Daten nicht nutzbar</td>
      </tr>
      <tr>
-       <td>chr1:1584541-1584551 &lt;-&gt; chr19:2301861-2301871</td>
+       <td>chr1:1584540-1584550 &lt;-&gt; chr19:2301860-2301870</td>
        <td>BND</td>
        <td></td>
        <td>n/a</td>
@@ -266,7 +266,7 @@
        <td>n/a</td>
      </tr>
      <tr>
-       <td>chr1:1598414-1598581</td>
+       <td>chr1:1598413-1598580</td>
        <td>DEL</td>
        <td>SLC35E2B</td>
        <td>n/a</td>
