--- a/src/cppNGSD-TEST/data_out/germline_report4.html
+++ b/src/cppNGSD-TEST/data_out/germline_report4.html
@@ -63,7 +63,7 @@ p
 <br />&nbsp;&nbsp;&nbsp;&nbsp;- Allele frequency &le; 1.00%
 <br />Gefundene Varianten in Zielregion gesamt: 135
 <br />Anzahl Varianten ausgew&auml;hlt f&uuml;r Report: 2
-<br />Anzahl CNVs ausgew&auml;hlt f&uuml;r Report: 1
+<br />Anzahl CNVs ausgew&auml;hlt f&uuml;r Report: 2
 <br />Anzahl SVs ausgew&auml;hlt f&uuml;r Report: 3
 </p>
 
@@ -74,10 +74,10 @@ p
 <tr><td><b>Variante</b></td><td><b>Genotyp</b></td><td><b>Gen(e)</b></td><td><b>Details</b></td><td><b>Klasse</b></td><td><b>Vererbung</b></td><td><b>gnomAD</b></td><td><b>RNA</b></td></tr>
 <tr>
 <td>
-chr13:40793234&nbsp;C&nbsp;&gt;&nbsp;G</td><td>het (comp-het)</td>
+chr13:40793233&nbsp;T&nbsp;&gt;&nbsp;A</td><td>hom (comp-het)</td>
 <td>SLC25A15
 </td>
-<td>SLC25A15:ENST00000338625.4:c.8C>G:p.Ser3Cys</td>
+<td>SLC25A15:ENST00000338625:c.7T>A:p.Ser3Thr</td>
 <td>3</td>
 <td>n/a</td>
 <td>n/a</td>
@@ -89,7 +89,7 @@ chr13:40793234&nbsp;C&nbsp;&gt;&nbsp;G</td><td>het (comp-het)</td>
 chr16:89531961&nbsp;G&nbsp;&gt;&nbsp;A</td><td>het (de-novo) (mosaic)</td>
 <td>SPG7
 </td>
-<td>SPG7:ENST00000268704.2:c.1045G>A:p.Gly349Ser</td>
+<td>SPG7:ENST00000268704:c.1045G>A:p.Gly349Ser</td>
 <td>5</td>
 <td>n/a</td>
 <td>0.0008</td>
@@ -109,13 +109,22 @@ chr16:89531961&nbsp;G&nbsp;&gt;&nbsp;A</td><td>het (de-novo) (mosaic)</td>
 <td>n/a</td>
 <td>kein Splicing-Effekt in RNA-Daten gefunden</td>
 </tr>
+<tr>
+<td>chr21:26799369-26991734 (manually curated)</td>
+<td>13</td>
+<td>0 (comp-het)</td>
+<td></td>
+<td>n/a</td>
+<td>n/a</td>
+<td>kein Splicing-Effekt in RNA-Daten gefunden</td>
+</tr>
 </table>
 <p>&nbsp;</p>
 <table>
 <tr><td><b>SV</b></td><td><b>Position</b></td><td><b>Genotyp</b></td><td><b>Gen(e)</b></td><td><b>Klasse</b></td><td><b>Vererbung</b></td><td><b>RNA</b></td></tr>
 <tr>
 <td>Insertion</td>
-<td>chr1:934144-934145</td>
+<td>chr1:934143-934144</td>
 <td>hom</td>
 <td>HES4</td>
 <td>n/a</td>
@@ -124,16 +133,16 @@ chr16:89531961&nbsp;G&nbsp;&gt;&nbsp;A</td><td>het (de-novo) (mosaic)</td>
 </tr>
 <tr>
 <td>Translokation</td>
-<td>chr1:1584547-1584547 &lt;-&gt; chr19:2301863-2301863</td>
-<td>het</td>
-<td>CDK11B, LINGO3</td>
+<td>chr1:1584540-1584550 &lt;-&gt; chr19:2301860-2301870</td>
+<td>hom</td>
+<td></td>
 <td>n/a</td>
 <td>n/a</td>
 <td>n/a</td>
 </tr>
 <tr>
 <td>Deletion</td>
-<td>chr1:1598414-1598581</td>
+<td>chr1:1598413-1598580</td>
 <td>hom</td>
 <td>SLC35E2B</td>
 <td>n/a</td>
