GSvar: moved KASP from HTML report to variant sheet.

--- a/src/cppNGSD-TEST/data_out/germline_sheet1.html
+++ b/src/cppNGSD-TEST/data_out/germline_sheet1.html
@@ -40,6 +40,7 @@
         <td class='noborder' valign='top'>
           <p>DNA/RNA#: <span class='line'>NA12878</span></p>
           <p>Genom: <span class='line'>GRCh38</span></p>
+          <p>KASP: <span class='line'>ok (0.0977%)</span></p>
           <br />
           <p>1. Auswerter: <span class='line'>Jim Raynor</span> Datum: <span class='line'>19.02.2021</span></p>
           <p><nobr>2. Auswerter: <span class='line'>Sarah Kerrigan</span> Datum: <span class='line'>21.02.2021</span></nobr></p>
