--- a/src/cppNGSD-TEST/data_out/germline_report3.html
+++ b/src/cppNGSD-TEST/data_out/germline_report3.html
@@ -76,7 +76,7 @@ p
 chr13:40793233&nbsp;T&nbsp;&gt;&nbsp;A</td><td>hom (comp-het)</td>
 <td>SLC25A15
 </td>
-<td>SLC25A15:ENST00000338625.1:c.7T>A:p.Ser3Thr</td>
+<td>SLC25A15:ENST00000338625.1/NM_014252:c.7T>A:p.Ser3Thr</td>
 <td>3</td>
 <td>n/a</td>
 <td>n/a</td>
