GSvar: changed column order in germline report table 'OMIM Gene und Phenotypen'

--- a/src/cppNGSD-TEST/data_out/germline_report2.html
+++ b/src/cppNGSD-TEST/data_out/germline_report2.html
@@ -249,10 +249,10 @@ Basen gesamt:31</p>
 <p><b>OMIM Gene und Phenotypen</b>
 </p>
 <table>
-<tr><td><b>Gen</b></td><td><b>Gen MIM</b></td><td><b>Phenotyp</b></td><td><b>Phenotyp MIM</b></td><td><b>Hauptphenotyp</b></td>
-</tr><tr><td>CYP7B1</td><td>603711</td><td>Spastic paraplegia 5A, autosomal recessive, 270800 (3)</td><td>270800</td><td>ja</td>
-</tr><tr><td>SLC25A15</td><td>603861</td><td>Hyperornithinemia-hyperammonemia-homocitrullinemia syndrome, 238970 (3)</td><td>238970</td><td>nein</td>
-</tr><tr><td>SPG7</td><td>602783</td><td>Spastic paraplegia 7, autosomal recessive, 607259 (3)</td><td>607259</td><td>nein</td>
+<tr><td><b>Gen</b></td><td><b>Gen MIM</b></td><td><b>Phenotyp MIM</b></td><td><b>Phenotyp</b></td><td><b>Hauptphenotyp</b></td>
+</tr><tr><td>CYP7B1</td><td>603711</td><td>270800</td><td>Spastic paraplegia 5A, autosomal recessive, 270800 (3)</td><td>ja</td>
+</tr><tr><td>SLC25A15</td><td>603861</td><td>238970</td><td>Hyperornithinemia-hyperammonemia-homocitrullinemia syndrome, 238970 (3)</td><td>nein</td>
+</tr><tr><td>SPG7</td><td>602783</td><td>607259</td><td>Spastic paraplegia 7, autosomal recessive, 607259 (3)</td><td>nein</td>
 </tr></table>
 
 <p><b>Polygener Risiko-Score (PRS)</b></p>
