--- a/src/cppNGSD-TEST/data_out/germline_report3.html
+++ b/src/cppNGSD-TEST/data_out/germline_report3.html
@@ -249,10 +249,10 @@ Base sum:31</p>
 <p><b>OMIM gene and phenotypes</b>
 </p>
 <table>
-<tr><td><b>Gene</b></td><td><b>gene MIM</b></td><td><b>phenotype</b></td><td><b>phenotype MIM</b></td><td><b>preferred phenotype</b></td>
-</tr><tr><td>CYP7B1</td><td>603711</td><td>Spastic paraplegia 5A, autosomal recessive, 270800 (3)</td><td>270800</td><td>yes</td>
-</tr><tr><td>SLC25A15</td><td>603861</td><td>Hyperornithinemia-hyperammonemia-homocitrullinemia syndrome, 238970 (3)</td><td>238970</td><td>no</td>
-</tr><tr><td>SPG7</td><td>602783</td><td>Spastic paraplegia 7, autosomal recessive, 607259 (3)</td><td>607259</td><td>no</td>
+<tr><td><b>Gene</b></td><td><b>gene MIM</b></td><td><b>phenotype MIM</b></td><td><b>phenotype</b></td><td><b>preferred phenotype</b></td>
+</tr><tr><td>CYP7B1</td><td>603711</td><td>270800</td><td>Spastic paraplegia 5A, autosomal recessive, 270800 (3)</td><td>yes</td>
+</tr><tr><td>SLC25A15</td><td>603861</td><td>238970</td><td>Hyperornithinemia-hyperammonemia-homocitrullinemia syndrome, 238970 (3)</td><td>no</td>
+</tr><tr><td>SPG7</td><td>602783</td><td>607259</td><td>Spastic paraplegia 7, autosomal recessive, 607259 (3)</td><td>no</td>
 </tr></table>
 
 <p><b>Polygenic Risk Scores (PRS)</b></p>
