GSvar: added HGVS.c/.c to variant sheet

--- a/src/cppNGSD-TEST/data_out/germline_sheet1.html
+++ b/src/cppNGSD-TEST/data_out/germline_sheet1.html
@@ -130,6 +130,8 @@
        <th>Genotyp</th>
        <th>Variante</th>
        <th>Erbgang</th>
+       <th>c.</th>
+       <th>p.</th>
        <th>Ausschlussgrund</th>
        <th>gnomAD</th>
        <th style='white-space: nowrap'>NGSD hom/het</th>
@@ -145,6 +147,8 @@
        <td>hom</td>
        <td style='white-space: nowrap'>chr13:40793233-40793233 T>A</td>
        <td>n/a</td>
+       <td>ENST00000338625.1:c.7T>A</td>
+       <td>ENST00000338625.1:p.Ser3Thr</td>
        <td></td>
        <td></td>
        <td>0 / 2</td>
