Fixed test error

--- a/src/cppNGSD-TEST/data_out/germline_report1.html
+++ b/src/cppNGSD-TEST/data_out/germline_report1.html
@@ -55,7 +55,7 @@ p
 <p><b>Filterkriterien </b>
 <br />&nbsp;&nbsp;&nbsp;&nbsp;- Allele frequency &le; 1.00%
 <br />Gefundene Varianten in Zielregion gesamt: 319
-<br />Anzahl Varianten ausgew&auml;hlt f&uuml;r Report: 0
+<br />Anzahl SNVs/InDels ausgew&auml;hlt f&uuml;r Report: 0
 <br />Anzahl CNVs ausgew&auml;hlt f&uuml;r Report: 0
 <br />Anzahl SVs ausgew&auml;hlt f&uuml;r Report: 0
 </p>
