--- a/src/cppNGSD-TEST/data_out/germline_report4.html
+++ b/src/cppNGSD-TEST/data_out/germline_report4.html
@@ -61,7 +61,7 @@ p
 <p><b>Filterkriterien </b>
 <br />&nbsp;&nbsp;&nbsp;&nbsp;- Allele frequency &le; 1.00%
 <br />Gefundene Varianten in Zielregion gesamt: 135
-<br />Anzahl Varianten ausgew&auml;hlt f&uuml;r Report: 2
+<br />Anzahl SNVs/InDels ausgew&auml;hlt f&uuml;r Report: 2
 <br />Anzahl CNVs ausgew&auml;hlt f&uuml;r Report: 2
 <br />Anzahl SVs ausgew&auml;hlt f&uuml;r Report: 3
 </p>
