--- a/src/cppNGSD-TEST/data_out/germline_report3.html
+++ b/src/cppNGSD-TEST/data_out/germline_report3.html
@@ -61,7 +61,7 @@ p
 <p><b>Criteria for variant filtering </b>
 <br />&nbsp;&nbsp;&nbsp;&nbsp;- Allele frequency &le; 1.00%
 <br />Variants in target region: 135
-<br />Variants selected for report: 2
+<br />SNVs/InDels selected for report: 2
 <br />CNVs selected for report: 2
 <br />SVs selected for report: 3
 </p>
