--- a/src/cppNGSD-TEST/data_out/germline_sheet1.html
+++ b/src/cppNGSD-TEST/data_out/germline_sheet1.html
@@ -145,7 +145,7 @@
        <td>SLC25A15</td>
        <td>coding_sequence_variant&amp;missense_variant&amp;protein_altering_variant</td>
        <td>hom</td>
-       <td style='white-space: nowrap'>chr13:40793233-40793233 T>A</td>
+       <td style='white-space: nowrap'>chr13:40793233-40793233 T>A (manually curated)</td>
        <td>n/a</td>
        <td>ENST00000338625.1:c.7T>A</td>
        <td>ENST00000338625.1:p.Ser3Thr</td>
@@ -259,7 +259,7 @@
        <td>RNA-Daten nicht nutzbar</td>
      </tr>
      <tr>
-       <td>chr1:1584540-1584550 &lt;-&gt; chr19:2301860-2301870</td>
+       <td>chr1:1584540-1584550 &lt;-&gt; chr19:2301860-2301870 (manually curated)</td>
        <td>BND</td>
        <td></td>
        <td>n/a</td>
