GSvar: updated report

--- a/src/cppNGSD-TEST/data_out/germline_report1.html
+++ b/src/cppNGSD-TEST/data_out/germline_report1.html
@@ -53,25 +53,21 @@ p
 
 <p><b>Filterkriterien </b>
 <br />&nbsp;&nbsp;&nbsp;&nbsp;- Allele frequency &le; 1.00%
-<br />Gefundene Varianten in Zielregion gesamt: 319
+<br /><br />Gefundene SNVs/InDels in Zielregion gesamt: 319
 <br />Anzahl SNVs/InDels ausgew&auml;hlt f&uuml;r Report: 0
 <br />Anzahl CNVs ausgew&auml;hlt f&uuml;r Report: 0
 <br />Anzahl SVs ausgew&auml;hlt f&uuml;r Report: 0
 </p>
-
-<p><b>Kleine Varianten nach klinischer Interpretation im Kontext der Fragestellung</b>
-<br />In der folgenden Tabelle werden neben wahrscheinlich pathogenen (Klasse 4) und pathogenen (Klasse 5) nur solche Varianten unklarer klinischer Signifikanz (Klasse 3) gelistet, f&uuml;r die in Zusammenschau von Literatur und Klinik des Patienten ein Beitrag zur Symptomatik denkbar ist und f&uuml;r die gegebenenfalls eine weitere Einordnung der klinischen Relevanz durch Folgeuntersuchungen sinnvoll ist. Eine Liste aller detektierten Varianten kann bei Bedarf angefordert werden.
-</p>
+<br />In den folgenden Tabellen werden neben wahrscheinlich pathogenen (Klasse 4) und pathogenen (Klasse 5) nur solche Varianten unklarer klinischer Signifikanz (Klasse 3) gelistet, f&uuml;r die in Zusammenschau von Literatur und Klinik des Patienten ein Beitrag zur Symptomatik denkbar ist und f&uuml;r die gegebenenfalls eine weitere Einordnung der klinischen Relevanz durch Folgeuntersuchungen sinnvoll ist. Eine Liste aller detektierten Varianten kann bei Bedarf angefordert werden.
+<br /><br /><b>Einzelbasenver&auml;nderungen (SNVs) und Insertionen/Deletionen (InDels) nach klinischer Interpretation im Kontext der Fragestellung</b>
 <table>
-<tr><td><b>Variante</b></td><td><b>Genotyp</b></td><td><b>Gen(e)</b></td><td><b>Details</b></td><td><b>Klasse</b></td><td><b>Vererbung</b></td><td><b>gnomAD</b></td><td><b>RNA</b></td></tr>
+<tr><td><b>Variante</b></td><td><b>Genotyp</b></td><td><b>Gen(e)</b></td><td><b>Details</b></td><td><b>Klasse</b></td><td><b>Vererbung</b></td><td><b>gnomAD AF</b></td><td><b>RNA</b></td></tr>
 <tr><td colspan="8">Keine</td></tr></table>
-<p>&nbsp;</p>
-<b>Kopienzahlver&auml;nderungen (CNV) nach klinischer Interpretation im Kontext der Fragestellung</b>
+<br /><b>Kopienzahlver&auml;nderungen (CNV) nach klinischer Interpretation im Kontext der Fragestellung</b>
 <table>
 <tr><td><b>CNV</b></td><td><b>Position</b></td><td><b>Gr&ouml;&szlig;e</b></td><td><b>Kopienzahl</b></td><td><b>Gen(e)</b></td><td><b>Klasse</b></td><td><b>Vererbung</b></td><td><b>RNA</b></td></tr>
 <tr><td colspan="8">Keine</td></tr></table>
-<p>&nbsp;</p>
-<b>Strukturver&auml;nderungen (SV) nach klinischer Interpretation im Kontext der Fragestellung</b>
+<br /><b>Strukturver&auml;nderungen (SV) nach klinischer Interpretation im Kontext der Fragestellung</b>
 <table>
 <tr><td><b>SV</b></td><td><b>Position</b></td><td><b>Gr&ouml;&szlig;e</b></td><td><b>Genotyp</b></td><td><b>Gen(e)</b></td><td><b>Klasse</b></td><td><b>Vererbung</b></td><td><b>RNA</b></td></tr>
 <tr><td colspan="8">Keine</td></tr></table>
