--- a/src/cppNGSD-TEST/data_out/germline_report2.html
+++ b/src/cppNGSD-TEST/data_out/germline_report2.html
@@ -59,17 +59,15 @@ p
 
 <p><b>Filterkriterien </b>
 <br />&nbsp;&nbsp;&nbsp;&nbsp;- Allele frequency &le; 1.00%
-<br />Gefundene Varianten in Zielregion gesamt: 135
+<br /><br />Gefundene SNVs/InDels in Zielregion gesamt: 135
 <br />Anzahl SNVs/InDels ausgew&auml;hlt f&uuml;r Report: 2
 <br />Anzahl CNVs ausgew&auml;hlt f&uuml;r Report: 2
 <br />Anzahl SVs ausgew&auml;hlt f&uuml;r Report: 3
 </p>
-
-<p><b>Kleine Varianten nach klinischer Interpretation im Kontext der Fragestellung</b>
-<br />In der folgenden Tabelle werden neben wahrscheinlich pathogenen (Klasse 4) und pathogenen (Klasse 5) nur solche Varianten unklarer klinischer Signifikanz (Klasse 3) gelistet, f&uuml;r die in Zusammenschau von Literatur und Klinik des Patienten ein Beitrag zur Symptomatik denkbar ist und f&uuml;r die gegebenenfalls eine weitere Einordnung der klinischen Relevanz durch Folgeuntersuchungen sinnvoll ist. Eine Liste aller detektierten Varianten kann bei Bedarf angefordert werden.
-</p>
+<br />In den folgenden Tabellen werden neben wahrscheinlich pathogenen (Klasse 4) und pathogenen (Klasse 5) nur solche Varianten unklarer klinischer Signifikanz (Klasse 3) gelistet, f&uuml;r die in Zusammenschau von Literatur und Klinik des Patienten ein Beitrag zur Symptomatik denkbar ist und f&uuml;r die gegebenenfalls eine weitere Einordnung der klinischen Relevanz durch Folgeuntersuchungen sinnvoll ist. Eine Liste aller detektierten Varianten kann bei Bedarf angefordert werden.
+<br /><br /><b>Einzelbasenver&auml;nderungen (SNVs) und Insertionen/Deletionen (InDels) nach klinischer Interpretation im Kontext der Fragestellung</b>
 <table>
-<tr><td><b>Variante</b></td><td><b>Genotyp</b></td><td><b>Gen(e)</b></td><td><b>Details</b></td><td><b>Klasse</b></td><td><b>Vererbung</b></td><td><b>gnomAD</b></td><td><b>RNA</b></td></tr>
+<tr><td><b>Variante</b></td><td><b>Genotyp</b></td><td><b>Gen(e)</b></td><td><b>Details</b></td><td><b>Klasse</b></td><td><b>Vererbung</b></td><td><b>gnomAD AF</b></td><td><b>RNA</b></td></tr>
 <tr>
 <td>
 chr13:40793233&nbsp;T&nbsp;&gt;&nbsp;A</td><td>hom (comp-het)</td>
@@ -90,13 +88,12 @@ chr16:89531961&nbsp;G&nbsp;&gt;&nbsp;A</td><td>het (de-novo) (mosaic)</td>
 <td>SPG7:ENST00000268704.1:c.1045G>A:p.Gly349Ser</td>
 <td>5</td>
 <td>n/a</td>
-<td>0.0008</td>
+<td>0.080%</td>
 <td>n/a</td>
 </tr>
 <tr><td colspan="8">OMIM ID: 602783 Details: GENE=SPG7 PHENOS=Spastic paraplegia 7,autosomal recessive,607259,Autosomal recessive,Autosomal dominant</td></tr>
 </table>
-<p>&nbsp;</p>
-<b>Kopienzahlver&auml;nderungen (CNV) nach klinischer Interpretation im Kontext der Fragestellung</b>
+<br /><b>Kopienzahlver&auml;nderungen (CNV) nach klinischer Interpretation im Kontext der Fragestellung</b>
 <table>
 <tr><td><b>CNV</b></td><td><b>Position</b></td><td><b>Gr&ouml;&szlig;e</b></td><td><b>Kopienzahl</b></td><td><b>Gen(e)</b></td><td><b>Klasse</b></td><td><b>Vererbung</b></td><td><b>RNA</b></td></tr>
 <tr>
@@ -120,8 +117,7 @@ chr16:89531961&nbsp;G&nbsp;&gt;&nbsp;A</td><td>het (de-novo) (mosaic)</td>
 <td>kein Splicing-Effekt in RNA-Daten gefunden</td>
 </tr>
 </table>
-<p>&nbsp;</p>
-<b>Strukturver&auml;nderungen (SV) nach klinischer Interpretation im Kontext der Fragestellung</b>
+<br /><b>Strukturver&auml;nderungen (SV) nach klinischer Interpretation im Kontext der Fragestellung</b>
 <table>
 <tr><td><b>SV</b></td><td><b>Position</b></td><td><b>Gr&ouml;&szlig;e</b></td><td><b>Genotyp</b></td><td><b>Gen(e)</b></td><td><b>Klasse</b></td><td><b>Vererbung</b></td><td><b>RNA</b></td></tr>
 <tr>
@@ -215,12 +211,13 @@ SPG7</td><td>126</td><td>chr16</td><td>89524046-89524104, 89554476-89554542
 <br />Abgedeckte Gene: 136985
 </p>
 
-<p><b>Abdeckungsstatistik f&uuml;r CCDS </b></p>
+<br /><b>Abdeckungsstatistik f&uuml;r CCDS </b>
+<br />
 CCDS gesamt: 4815
 <br />CCDS mit Tiefe &ge;20: 4347 (90.28%)
 <br />CCDS mit Tiefe &lt;20: 468 (9.72%)
 <br />
-<p><b>Abdeckungsstatistik f&uuml;r CCDS  +-5 </b></p>
+<br /><b>Abdeckungsstatistik f&uuml;r CCDS  +-5 </b>
 <table>
 <tr><td><b>Gen</b></td><td><b>Transcript</b></td><td><b>Gr&ouml;&szlig;e</b></td><td><b>Basen</b></td><td><b>Chromosom</b></td><td><b>Koordinaten (hg38)</b></td></tr><tr><td>CYP7B1</td><td>ENST00000310193.1</td><td>1581</td><td>233</td><td>chr8</td><td>64615713-64615740, 64616216-64616218, 64624398-64624515, 64798461-64798544</td></tr><tr><td>SLC25A15</td><td>ENST00000338625.1</td><td>966</td><td>129</td><td>chr13</td><td>40799186-40799314</td></tr><tr><td>SPG7</td><td>ENST00000268704.1</td><td>2558</td><td>121</td><td>chr16</td><td>89524046-89524104, 89554481-89554542</td></tr></table>
 CCDS  +-5 gesamt: 5105
