--- a/src/cppNGSD-TEST/data_out/germline_report3.html
+++ b/src/cppNGSD-TEST/data_out/germline_report3.html
@@ -59,17 +59,15 @@ p
 
 <p><b>Criteria for variant filtering </b>
 <br />&nbsp;&nbsp;&nbsp;&nbsp;- Allele frequency &le; 1.00%
-<br />Variants in target region: 135
+<br /><br />Small variants in target region: 135
 <br />SNVs/InDels selected for report: 2
 <br />CNVs selected for report: 2
 <br />SVs selected for report: 3
 </p>
-
-<p><b>List of prioritized small variants</b>
-<br />In addition to likely pathogenic variants (class 4) and pathogenic variants (class 5), the following table contains only those variants of uncertain significance (class 3), for which a contribution to the clinical symptoms of the patient is conceivable and for which a further evaluation of the clinical relevance by follow-up examinations may be useful.  A list of all detected variants can be provided on request.
-</p>
+<br />In addition to likely pathogenic variants (class 4) and pathogenic variants (class 5), the following tables contains only those variants of uncertain significance (class 3), for which a contribution to the clinical symptoms of the patient is conceivable and for which a further evaluation of the clinical relevance by follow-up examinations may be useful.  A list of all detected variants can be provided on request.
+<br /><br /><b>List of prioritized small variants</b>
 <table>
-<tr><td><b>Variant</b></td><td><b>Genotype</b></td><td><b>Genes</b></td><td><b>Details</b></td><td><b>Class</b></td><td><b>Inheritance</b></td><td><b>gnomAD</b></td><td><b>RNA</b></td></tr>
+<tr><td><b>Variant</b></td><td><b>Genotype</b></td><td><b>Genes</b></td><td><b>Details</b></td><td><b>Class</b></td><td><b>Inheritance</b></td><td><b>gnomAD AF</b></td><td><b>RNA</b></td></tr>
 <tr>
 <td>
 chr13:40793233&nbsp;T&nbsp;&gt;&nbsp;A</td><td>hom (comp-het)</td>
@@ -90,13 +88,12 @@ chr16:89531961&nbsp;G&nbsp;&gt;&nbsp;A</td><td>het (de-novo) (mosaic)</td>
 <td>SPG7:ENST00000268704.1:c.1045G>A:p.Gly349Ser</td>
 <td>5</td>
 <td>n/a</td>
-<td>0.0008</td>
+<td>0.080%</td>
 <td>n/a</td>
 </tr>
 <tr><td colspan="8">OMIM ID: 602783 Details: GENE=SPG7 PHENOS=Spastic paraplegia 7,autosomal recessive,607259,Autosomal recessive,Autosomal dominant</td></tr>
 </table>
-<p>&nbsp;</p>
-<b>List of prioritized copy-number variants</b>
+<br /><b>List of prioritized copy-number variants</b>
 <table>
 <tr><td><b>CNV</b></td><td><b>Position</b></td><td><b>Size</b></td><td><b>copy-number</b></td><td><b>Genes</b></td><td><b>Class</b></td><td><b>Inheritance</b></td><td><b>RNA</b></td></tr>
 <tr>
@@ -120,8 +117,7 @@ chr16:89531961&nbsp;G&nbsp;&gt;&nbsp;A</td><td>het (de-novo) (mosaic)</td>
 <td>no splicing effect found in RNA dataset</td>
 </tr>
 </table>
-<p>&nbsp;</p>
-<b>List of prioritized structural variants</b>
+<br /><b>List of prioritized structural variants</b>
 <table>
 <tr><td><b>SV</b></td><td><b>Position</b></td><td><b>Size</b></td><td><b>Genotype</b></td><td><b>Genes</b></td><td><b>Class</b></td><td><b>Inheritance</b></td><td><b>RNA</b></td></tr>
 <tr>
@@ -215,12 +211,13 @@ SPG7</td><td>126</td><td>chr16</td><td>89524046-89524104, 89554476-89554542
 <br />Covered genes: 136985
 </p>
 
-<p><b>Coverage statistics for CCDS </b></p>
+<br /><b>Coverage statistics for CCDS </b>
+<br />
 CCDS overall: 4815
 <br />CCDS with depth &ge;20: 4347 (90.28%)
 <br />CCDS with depth &lt;20: 468 (9.72%)
 <br />
-<p><b>Coverage statistics for CCDS  +-5 </b></p>
+<br /><b>Coverage statistics for CCDS  +-5 </b>
 <table>
 <tr><td><b>Gene</b></td><td><b>Transcript</b></td><td><b>Size</b></td><td><b>Bases</b></td><td><b>Chromosome</b></td><td><b>Coordinates (hg38)</b></td></tr><tr><td>CYP7B1</td><td>ENST00000310193.1</td><td>1581</td><td>233</td><td>chr8</td><td>64615713-64615740, 64616216-64616218, 64624398-64624515, 64798461-64798544</td></tr><tr><td>SLC25A15</td><td>ENST00000338625.1</td><td>966</td><td>129</td><td>chr13</td><td>40799186-40799314</td></tr><tr><td>SPG7</td><td>ENST00000268704.1</td><td>2558</td><td>121</td><td>chr16</td><td>89524046-89524104, 89554481-89554542</td></tr></table>
 CCDS  +-5 overall: 5105
