--- a/src/cppNGSD-TEST/data_out/germline_report4.html
+++ b/src/cppNGSD-TEST/data_out/germline_report4.html
@@ -44,7 +44,6 @@ p
 <br />Prozessierungssystem-Typ: Panel Haloplex
 <br />Referenzgenom: GRCh37
 <br />Datum: 19.02.2021
-<br />Benutzer: ahmustm1
 <br />Analysepipeline: megSAP 0.2-486-gc928f885
 <br />Auswertungssoftware: cppNGSD-TEST 
 </p>
@@ -55,22 +54,20 @@ p
 <p><b>Zielregion</b>
 <br /><span style="font-size: 8pt;">Die Zielregion umfasst mindestens die CCDS ("consensus coding sequence") unten genannter Gene &plusmn;20 Basen flankierender intronischer Sequenz, kann aber auch zus&auml;tzliche Exons und/oder flankierende Basen beinhalten.
 <br />Name: panel
-<br />Ausgewertete Gene (3): CYP7B1, SLC25A15, SPG7
+<br />Ausgewertete Gene (3): siehe Abdeckungsstatistik
 </span></p>
 
 <p><b>Filterkriterien </b>
 <br />&nbsp;&nbsp;&nbsp;&nbsp;- Allele frequency &le; 1.00%
-<br />Gefundene Varianten in Zielregion gesamt: 135
+<br /><br />Gefundene SNVs/InDels in Zielregion gesamt: 135
 <br />Anzahl SNVs/InDels ausgew&auml;hlt f&uuml;r Report: 2
 <br />Anzahl CNVs ausgew&auml;hlt f&uuml;r Report: 2
 <br />Anzahl SVs ausgew&auml;hlt f&uuml;r Report: 3
 </p>
-
-<p><b>Varianten nach klinischer Interpretation im Kontext der Fragestellung</b>
-<br />In der folgenden Tabelle werden neben wahrscheinlich pathogenen (Klasse 4) und pathogenen (Klasse 5) nur solche Varianten unklarer klinischer Signifikanz (Klasse 3) gelistet, f&uuml;r die in Zusammenschau von Literatur und Klinik des Patienten ein Beitrag zur Symptomatik denkbar ist und f&uuml;r die gegebenenfalls eine weitere Einordnung der klinischen Relevanz durch Folgeuntersuchungen sinnvoll ist. Eine Liste aller detektierten Varianten kann bei Bedarf angefordert werden.
-</p>
+<br />In den folgenden Tabellen werden neben wahrscheinlich pathogenen (Klasse 4) und pathogenen (Klasse 5) nur solche Varianten unklarer klinischer Signifikanz (Klasse 3) gelistet, f&uuml;r die in Zusammenschau von Literatur und Klinik des Patienten ein Beitrag zur Symptomatik denkbar ist und f&uuml;r die gegebenenfalls eine weitere Einordnung der klinischen Relevanz durch Folgeuntersuchungen sinnvoll ist. Eine Liste aller detektierten Varianten kann bei Bedarf angefordert werden.
+<br /><br /><b>Einzelbasenver&auml;nderungen (SNVs) und Insertionen/Deletionen (InDels) nach klinischer Interpretation im Kontext der Fragestellung</b>
 <table>
-<tr><td><b>Variante</b></td><td><b>Genotyp</b></td><td><b>Gen(e)</b></td><td><b>Details</b></td><td><b>Klasse</b></td><td><b>Vererbung</b></td><td><b>gnomAD</b></td><td><b>RNA</b></td></tr>
+<tr><td><b>Variante</b></td><td><b>Genotyp</b></td><td><b>Gen(e)</b></td><td><b>Details</b></td><td><b>Klasse</b></td><td><b>Vererbung</b></td><td><b>gnomAD AF</b></td><td><b>RNA</b></td></tr>
 <tr>
 <td>
 chr13:40793233&nbsp;T&nbsp;&gt;&nbsp;A</td><td>hom (comp-het)</td>
@@ -91,17 +88,18 @@ chr16:89531961&nbsp;G&nbsp;&gt;&nbsp;A</td><td>het (de-novo) (mosaic)</td>
 <td>SPG7:ENST00000268704.1:c.1045G>A:p.Gly349Ser</td>
 <td>5</td>
 <td>n/a</td>
-<td>0.0008</td>
+<td>0.080%</td>
 <td>n/a</td>
 </tr>
 <tr><td colspan="8">OMIM ID: 602783 Details: GENE=SPG7 PHENOS=Spastic paraplegia 7,autosomal recessive,607259,Autosomal recessive,Autosomal dominant</td></tr>
 </table>
-<p>&nbsp;</p>
+<br /><b>Kopienzahlver&auml;nderungen (CNV) nach klinischer Interpretation im Kontext der Fragestellung</b>
 <table>
-<tr><td><b>CNV</b></td><td><b>Regionen</b></td><td><b>CN</b></td><td><b>Gen(e)</b></td><td><b>Klasse</b></td><td><b>Vererbung</b></td><td><b>RNA</b></td></tr>
+<tr><td><b>CNV</b></td><td><b>Position</b></td><td><b>Gr&ouml;&szlig;e</b></td><td><b>Kopienzahl</b></td><td><b>Gen(e)</b></td><td><b>Klasse</b></td><td><b>Vererbung</b></td><td><b>RNA</b></td></tr>
 <tr>
+<td>Deletion</td>
 <td>chr21:10541092-10649856</td>
-<td>22</td>
+<td>108.765 kb / 22 Regionen</td>
 <td>1 (comp-het)</td>
 <td>IGHV1OR21-1, TPTE</td>
 <td>n/a</td>
@@ -109,8 +107,9 @@ chr16:89531961&nbsp;G&nbsp;&gt;&nbsp;A</td><td>het (de-novo) (mosaic)</td>
 <td>kein Splicing-Effekt in RNA-Daten gefunden</td>
 </tr>
 <tr>
-<td>chr21:26799369-26991734 (manually curated)</td>
-<td>13</td>
+<td>Deletion</td>
+<td>chr21:26799369-26991734</td>
+<td>192.366 kb / 13 Regionen</td>
 <td>0 (comp-het)</td>
 <td></td>
 <td>n/a</td>
@@ -118,13 +117,13 @@ chr16:89531961&nbsp;G&nbsp;&gt;&nbsp;A</td><td>het (de-novo) (mosaic)</td>
 <td>kein Splicing-Effekt in RNA-Daten gefunden</td>
 </tr>
 </table>
-<p>&nbsp;</p>
+<br /><b>Strukturver&auml;nderungen (SV) nach klinischer Interpretation im Kontext der Fragestellung</b>
 <table>
-<tr><td><b>SV</b></td><td><b>Position</b></td><td><b>Genotyp</b></td><td><b>Gen(e)</b></td><td><b>Klasse</b></td><td><b>Vererbung</b></td><td><b>RNA</b></td></tr>
+<tr><td><b>SV</b></td><td><b>Position</b></td><td><b>Gr&ouml;&szlig;e</b></td><td><b>Genotyp</b></td><td><b>Gen(e)</b></td><td><b>Klasse</b></td><td><b>Vererbung</b></td><td><b>RNA</b></td></tr>
 <tr>
 <td>Insertion</td>
 <td>chr1:934143-934144</td>
-<td>hom</td>
+<td></td><td>hom</td>
 <td>HES4</td>
 <td>n/a</td>
 <td>n/a</td>
@@ -133,7 +132,7 @@ chr16:89531961&nbsp;G&nbsp;&gt;&nbsp;A</td><td>het (de-novo) (mosaic)</td>
 <tr>
 <td>Translokation</td>
 <td>chr1:1584540-1584550 &lt;-&gt; chr19:2301860-2301870</td>
-<td>hom</td>
+<td></td><td>hom</td>
 <td></td>
 <td>n/a</td>
 <td>n/a</td>
@@ -142,7 +141,7 @@ chr16:89531961&nbsp;G&nbsp;&gt;&nbsp;A</td><td>het (de-novo) (mosaic)</td>
 <tr>
 <td>Deletion</td>
 <td>chr1:1598413-1598580</td>
-<td>hom</td>
+<td>0.167 kb</td><td>hom</td>
 <td>SLC35E2B</td>
 <td>n/a</td>
 <td>n/a</td>
@@ -163,7 +162,6 @@ chr16:89531961&nbsp;G&nbsp;&gt;&nbsp;A</td><td>het (de-novo) (mosaic)</td>
 </td>
 </tr>
 </table>
-<p>&nbsp;</p>
 <p>F&uuml;r Informationen zur Klassifizierung von Varianten, siehe allgemeine Zusatzinformationen.
 </p>
 <p>Teilweise k&ouml;nnen bei Varianten unklarer Signifikanz (Klasse 3) -  in Abh&auml;ngigkeit von der Art der genetischen Ver&auml;nderung, der Familienanamnese und der Klinik des/der Patienten - weiterf&uuml;hrende Untersuchungen eine &Auml;nderung der Klassifizierung bewirken. Bei konkreten differentialdiagnostischen Hinweisen auf eine entsprechende Erkrankung k&ouml;nnen ggf. weiterf&uuml;hrende genetische Untersuchungen indiziert sein.
@@ -184,7 +182,7 @@ chr16:89531961&nbsp;G&nbsp;&gt;&nbsp;A</td><td>het (de-novo) (mosaic)</td>
 </p>
 <br />Komplett abgedeckte Gene: 
 <br />Anteil Regionen mit Tiefe &lt;20: 5.69%
-<br />Fehlende Basen in nicht komplett abgedeckten Genen: CYP7B1 <span style="font-size: 8pt;">243</span>, SLC25A15 <span style="font-size: 8pt;">129</span>, SPG7 <span style="font-size: 8pt;">126</span>
+<br />Unvollst&auml;ndig abgedeckte Gene (fehlende Basen in bp): CYP7B1 <span style="font-size: 8pt;">(243)</span>, SLC25A15 <span style="font-size: 8pt;">(129)</span>, SPG7 <span style="font-size: 8pt;">(126)</span>
 <p>Details Regionen mit Tiefe &lt;20:
 </p>
 <table>
@@ -213,30 +211,28 @@ SPG7</td><td>126</td><td>chr16</td><td>89524046-89524104, 89554476-89554542
 <br />Abgedeckte Gene: 136985
 </p>
 
-<p><b>Abdeckungsstatistik f&uuml;r CCDS </b></p>
-<p>CCDS gesamt: 4815
+<br /><b>Abdeckungsstatistik f&uuml;r CCDS </b>
+<br />
+CCDS gesamt: 4815
 <br />CCDS mit Tiefe &ge;20: 4347 (90.28%)
 <br />CCDS mit Tiefe &lt;20: 468 (9.72%)
-</p>
-
-<p><b>Abdeckungsstatistik f&uuml;r CCDS  +-5 </b></p>
-<p><table>
-<tr><td><b>Gen</b></td><td><b>Transcript</b></td><td><b>Gr&ouml;&szlig;e</b></td><td><b>Basen</b></td><td><b>Chromosom</b></td><td><b>Koordinaten (hg38)</b></td></tr><tr><td>CYP7B1</td><td>ENST00000310193.1</td><td>1581</td><td>233</td><td>chr8</td><td>64615713-64615740, 64616216-64616218, 64624398-64624515, 64798461-64798544</td></tr><tr><td>SLC25A15</td><td>ENST00000338625.1</td><td>966</td><td>129</td><td>chr13</td><td>40799186-40799314</td></tr><tr><td>SPG7</td><td>ENST00000268704.1</td><td>2558</td><td>121</td><td>chr16</td><td>89524046-89524104, 89554481-89554542</td></tr></table></p>
-<p>CCDS  +-5 gesamt: 5105
+<br />
+<br /><b>Abdeckungsstatistik f&uuml;r CCDS  +-5 </b>
+<table>
+<tr><td><b>Gen</b></td><td><b>Transcript</b></td><td><b>Gr&ouml;&szlig;e</b></td><td><b>Basen</b></td><td><b>Chromosom</b></td><td><b>Koordinaten (hg38)</b></td></tr><tr><td>CYP7B1</td><td>ENST00000310193.1</td><td>1581</td><td>233</td><td>chr8</td><td>64615713-64615740, 64616216-64616218, 64624398-64624515, 64798461-64798544</td></tr><tr><td>SLC25A15</td><td>ENST00000338625.1</td><td>966</td><td>129</td><td>chr13</td><td>40799186-40799314</td></tr><tr><td>SPG7</td><td>ENST00000268704.1</td><td>2558</td><td>121</td><td>chr16</td><td>89524046-89524104, 89554481-89554542</td></tr></table>
+CCDS  +-5 gesamt: 5105
 <br />CCDS  +-5 mit Tiefe &ge;20: 4622 (90.54%)
 <br />CCDS  +-5 mit Tiefe &lt;20: 483 (9.46%)
-</p>
-<p>Komplett abgedeckte Gene: 
-<br />Fehlende Basen in nicht komplett abgedeckten Genen: CYP7B1 <span style="font-size: 8pt;">233</span>, SLC25A15 <span style="font-size: 8pt;">129</span>, SPG7 <span style="font-size: 8pt;">121</span>
-</p>
+<br /><br />Komplett abgedeckte Gene: 
+<br /><br />Unvollst&auml;ndig abgedeckte Gene (fehlende Basen in bp): CYP7B1 <span style="font-size: 8pt;">(233)</span>, SLC25A15 <span style="font-size: 8pt;">(129)</span>, SPG7 <span style="font-size: 8pt;">(121)</span>
+
 <p><b>L&uuml;ckenschluss</b></p>
-<p>L&uuml;cken die mit Sanger-Sequenzierung geschlossen wurden:<br /><table>
+<br />L&uuml;cken die mit Sanger-Sequenzierung geschlossen wurden:<br /><table>
 <tr><td><b>Gen</b></td><td><b>Basen</b></td><td><b>Chromosom</b></td><td><b>Koordinaten (hg38)</b></td></tr>
 <tr>
 <td>SPG7</td><td>59</td><td>chr16</td><td>89524046-89524104</td></tr>
 </table>
-Basen gesamt:59</p>
-<p>L&uuml;cken die mit visueller Inspektion der Rohdaten &uuml;berpr&uuml;ft wurden:<br /><table>
+Basen gesamt:59<p>L&uuml;cken die mit visueller Inspektion der Rohdaten &uuml;berpr&uuml;ft wurden:<br /><table>
 <tr><td><b>Gen</b></td><td><b>Basen</b></td><td><b>Chromosom</b></td><td><b>Koordinaten (hg38)</b></td></tr>
 <tr>
 <td>CYP7B1</td><td>28</td><td>chr8</td><td>64615713-64615740</td></tr>
